# puara-gestures

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  MadgwickQuaternionMathReview.md  README.md  imu_orientation.cpp  imu_orientation.h  library.json  library.properties  magn_save_calibrated.csv  magn_save_not_calibrated.csv  main.cpp  puara_gestures.cpp  puara_gestures.h  puara_gestures.new.h  puara_gestures_old.h  testing_roll.h  testing_tilt.h
.github/workflows/: cmake.yml  doxygen.yml  generate-puara-gestures-arduino.yml
Builds/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
Builds/Testing/: TAG
Builds/Testing/20250217-1918/: Test.xml
descriptors/: puara-button.h  puara-calibration.h  puara-circularbuffer.h  puara-gestures.code-workspace  puara-jab.cpp  puara-jab.h  puara-leakyintegrator.h  puara-maprange.h  puara-roll.h  puara-rollingminmax.h  puara-shake.cpp  puara-shake.h  puara-smooth.h  puara-structs.h  puara-threshold.h  puara-tilt.h  puara-touch.h  puara-utils.cpp  puara-utils.h  puara-wrap.h  template.cpp
exampleProjects/touch/: .gitignore  README.md  diagram.json  platformio.ini  wokwi.toml
exampleProjects/touch/src/: TinyTouch.hpp  main.cpp
examples/arduino/: helloWorld.ino
examples/arduino/descriptors/breath/: breath.ino
examples/arduino/descriptors/button/: button.ino
examples/arduino/descriptors/derivative/: derivative.ino
examples/arduino/descriptors/envelope/: envelope.ino
examples/arduino/descriptors/freefall/: freefall.ino
examples/arduino/descriptors/heading/: heading.ino
examples/arduino/descriptors/impact/: impact.ino
examples/arduino/descriptors/jab/: jab.ino
examples/arduino/descriptors/multitouch/: multitouch.ino
examples/arduino/descriptors/rhythm/: rhythm.ino
examples/arduino/descriptors/ribbon/: ribbon.ino
examples/arduino/descriptors/segmenter/: segmenter.ino
examples/arduino/descriptors/spin/: spin.ino
examples/arduino/descriptors/stillness/: stillness.ino
examples/arduino/descriptors/tilt/: tilt.ino
examples/arduino/utils/blobDetector/: blobDetector.ino
examples/arduino/utils/calibration/: calibration.ino
examples/arduino/utils/chrono/: chrono.ino
examples/arduino/utils/circularbuffer/: circularbuffer.ino
examples/arduino/utils/discretizer/: discretizer.ino
examples/arduino/utils/includeEigen/: includeEigen.ino
examples/arduino/utils/kalmanQuaternion/: kalmanQuaternion.ino
examples/arduino/utils/maprange/: maprange.ino
examples/standalone/: main.cpp
examples/touch/src/: TinyTouch.hpp
include/puara/: gestures.h  structs.h  utils.h
include/puara/descriptors/: MadgwickQuaternion.h  MahonyQuaternion.h  breath.h  brushRub.h  button.h  derivative.h  envelope.h  freefall.h  heading.h  impact.h  jab.h  madgwickQuaternion.h  multitouch.h  projection.h  rhythm.h  ribbon.h  roll.h  segmenter.h  shake.h  simple_tilt_roll.h  spin.h  stillness.h  template.h  tilt.h  touch.h  touchArrayGestureDetector.h  touchFeatures.h
include/puara/utils/: KalmanQuaternion.h  MadgwickQuaternion.h  MagnetometerCalibrationRecommendations.md  MahonyQuaternion.h  blobDetection.h  blobDetector.h  calibration.h  chrono.h  circularbuffer.h  discretizer.h  includeEigen.h  kalmanQuaternion.h  leakyintegrator.h  madgwickQuaternion.h  magnetometerCalibration.h  magnetometerCalibration_EllipsoidFit.h  magnetometerCalibration_MinMaxScaling.h  magnetometerCalibration_embedded.h  mahonyQuaternion.h  maprange.h  normalizer.h  offsetValue.h  oneeuro.h  peakdetector.h  rollingminmax.h  schmitttrigger.h  smooth.h  threshold.h  wrap.h
src/: puara_gestures.cpp  puara_gestures.h
src/puara/: gestures.h  utils.h
src/puara/descriptors/: brushRub.h  roll.h  tilt.h  touchArrayGestureDetector.h
src/puara/utils/: blobDetector.h  circularbuffer.h  maprange.h  rollingminmax.h  smooth.h  threshold.h  wrap.h
standalone/: CMakeLists.txt  main.cpp  main_new_old.cpp  main_old.cpp
test_files/: accel_raw.csv  gyro_raw.csv  roll_raw.csv
test_files/accl/: roll_clock.txt  stat_down.txt  stat_left.txt
test_files/gyro/: roll_clock.txt  stat_down.txt  stat_right.txt
test_files/mag/: stat_down.txt  stat_right.txt
test_files/max/: stat_up.txt
test_files/max/accl/: roll_counter.txt  stat_right.txt  stat_up.txt
test_files/max/gyro/: roll_counter.txt  stat_left.txt
test_files/max/mag/: roll_clock.txt  roll_counter.txt  stat_left.txt  stat_up.txt
test_files/max/ypr/: stat_left.txt  stat_right.txt
test_files/t-stick/: accel_raw.csv  gyro_raw.csv  mag_raw.csv  roll_raw.csv  timestamp_raw.csv
test_files/t-stick/drifting_data/: gyro_raw.csv  mag_raw.csv
test_files/t-stick/increasing_data/: accel_raw.csv  gyro_raw.csv  mag_raw.csv  timestamp_raw.csv
test_files/ypr/: roll_clock.txt  roll_counter.txt  stat_down.txt  stat_up.txt
testing files/projection/: orientation_raw.csv  timestamp_raw.csv
testing files/roll/: accel_raw.csv  gyro_raw.csv  mag_raw.csv  roll_raw.csv  timestamp_raw.csv
testing files/tilt/: gyro_raw.csv  mag_raw.csv  tilt_raw.csv  timestamp_raw.csv
testing_files/: accel_raw.csv
tests/: CMakeLists.txt  README.md  TEST_COVERAGE.md  generate-platformio.ini.sh  test_descriptors.cpp  test_utils.cpp  testing_IMU-filters.cpp  testing_blobDetector.cpp  testing_leakyintegrator.cpp  testing_magnetometerCalibration.cpp  testing_projection.cpp  testing_roll.cpp  testing_structs.cpp  testing_tilt.cpp  testing_touch.cpp  testing_wrap.cpp
tests/arduino/arduino_sketch_test/: arduino_sketch_test.ino
tests/data/: imu_data_jab_shake.csv  imu_data_roll.csv  imu_data_tilt.csv  magnetometer_raw_floats.csv  magnetometer_raw_int.csv
tests/descriptors/: breath.cpp  button.cpp  derivative.cpp  envelope.cpp  freefall.cpp  heading.cpp  impact.cpp  jab.cpp  multitouch.cpp  rhythm.cpp  ribbon.cpp  roll.cpp  segmenter.cpp  shake.cpp  simple_tilt_roll.cpp  spin.cpp  stillness.cpp  test_helpers.h  tilt.cpp  touch_array.cpp
tests/platformio/: diagram.json  platformio.ini  platformio_sketch_test.cpp  wokwi.toml
tests/platformio/src/: main.cpp
(+48 files in other folders)
